# Faculty

./: CSA  README.md
ANDROID/myapplication/: MainActivity.kt
C++/PregatireModelView1/: PregatireModelView.rar  PregatireModelView.sln
C++/PregatireModelView2/: TestOOPCar.sln
C++/PregatireModelView3/: TESTOOP.sln
C++/PregatireModelView4/: ModelView2.rar  ModelView2.sln
C++/PregatireTestLab1/: Test.sln
C++/PregatireTestLab2/: TESTOOP3.sln
C++/a1-cheresandreea-1/: A1.c  A1.sln  A1.vcxproj  A1.vcxproj.filters
C++/a23-cheresandreea-1/: A2Nou.sln
C++/a45-cheresandreea-1/: A45.sln  A45.vcxproj  A45.vcxproj.filters  Dog.cpp  Dog.h  DynamicVector.cpp  DynamicVector.h  Repo.cpp  Repo.h  Service.cpp  Service.h  Tests.cpp  UI.cpp  UI.h  start.cpp
C++/a6-cheresandreea-1/: A6.sln  A6.vcxproj  A6.vcxproj.filters  AA.sln  AA.vcxproj  Dog.cpp  Dog.h  Repo.cpp  Repo.h  Service.cpp  Service.h  Tests.cpp  Text  UI.cpp  (+2 more)
CSA/: Exam.asm  FilesExercises.asm  OpenFileExamples.asm  PrepTest1.asm  PrepTest2.asm  PrepTest3.asm  README.md  SumOfNumbers.asm  TestEx1.asm  TestEx2.asm  TestEx3.asm  TestEx4.asm  TestEx5.asm  Week11Homework.asm  Week12Homework.asm  Week6Homework.asm  Week8LAB_2.asm  Week8LAB_3.asm  Week8_homework.asm  Week9Homework.asm
DSA/BinarySearchTree/: App.cpp  CMakeLists.txt  ListIterator.cpp  ListIterator.h  ShortTest.cpp  SortedIndexeList.cpp  SortedIndexedList.h
MPP/: README.md
PS/: Lab1ex1.m  Lab1ex2.m  Lab1ex3.m  Lab2ex1.m  Lab2ex2.m  Lab3ex1.m  Lab3ex2.m  Lab3ex3.m  Lab4ex1.m  Lab4ex2.m  Lab4ex3.m  Lab5ex1.m  Lab5ex2.m  Lab6.m  PREGATIRE.m  README.md
(+654 files in other folders)
